fix header bar styling issues and use darker font color in the mobile for better visibility

--- a/_sass/_header.scss
+++ b/_sass/_header.scss
@@ -21,22 +21,41 @@
 
 .site-title {
     font-size: 20px;
-    line-height: 36px;
+    line-height: 40px;
     letter-spacing: -1px;
     margin-bottom: 0;
     margin-top: 10px;
     float: left;
 
     @include media-query($on-palm) {
-        line-height: 30px;
-        padding-left: 10px;
+        line-height: 35px;
+    }
+}
+
+.header-theme-toggle {
+    display: none;
+
+    // Desktop: show inside nav flow
+    @media screen and (min-width: 601px) {
+        display: block;
+        float: right;
         margin-top: 10px;
+        margin-right: 10px;
+    }
+
+    // Mobile: position absolutely
+    @include media-query($on-palm) {
+        display: block;
+        position: absolute;
+        top: 5px;
+        right: calc($horizontal-spacing-unit / 2 + 42px);
+        z-index: 10;
     }
 }
 .site-nav {
     float: right;
     line-height: $nav-height;
-    
+
     .nav-trigger {
         display: none;
     }
@@ -44,7 +63,7 @@
     .menu-icon {
         display: none;
     }
-    
+
     .page-link{
         line-height: $line-height;
         // Gaps between nav items, but not on the first one
@@ -52,33 +71,62 @@
             margin-left: 10px;
         }
     }
+
+    // Desktop: vertical alignment
+    @media screen and (min-width: 601px) {
+        display: flex;
+        align-items: center;
+
+        .trigger {
+            display: flex;
+            align-items: center;
+        }
+
+        .page-link {
+            line-height: normal;
+            padding: 8px 0;
+        }
+    }
     // added for hamburger
     @include media-query($on-palm) {
         position: absolute;
-        top: 9px;
+        top: 5px;
         right: $horizontal-spacing-unit / 2;
         background-color: $background-color;
         border: 1px solid $grey-color-light;
         border-radius: 5px;
         text-align: right;
+        z-index: 11;
+
+        input:checked ~ label,
+        input:checked ~ .menu-icon {
+            z-index: 101;
+        }
 
         label[for="nav-trigger"] {
             display: block;
             float: right;
-            width: 36px;
-            height: 36px;
+            width: 32px;
+            height: 32px;
             z-index: 2;
             cursor: pointer;
         }
 
         .menu-icon {
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             float: right;
-            width: 36px;
-            height: 26px;
+            width: 32px;
+            height: 32px;
             line-height: 0;
-            padding-top: 10px;
+            padding: 0;
             text-align: center;
+
+            > svg {
+                width: 18px;
+                height: 15px;
+            }
 
             > svg path {
                 fill: $grey-color-dark;
@@ -93,6 +141,11 @@
         input:checked ~ .trigger {
             display: block;
             padding-bottom: 5px;
+            padding-left: 0;
+            padding-right: 0;
+            padding-top: 0;
+            z-index: 100;
+            position: relative;
         }
 
         .page-link {
@@ -104,6 +157,7 @@
 
             &:first-child {
                 border-top: 1px solid #e8e8e8;
+                margin-left: 10px;
             }
         }
     }
