--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -73,7 +73,7 @@ $darken-4:          rgba(#000,.5) !default;
 
 $theme-color:       $red-uva;
 $code-color:        $dark-gray;
-$text-color:        $mid-gray;
+$text-color:        $dark-gray;
 $background-color:  white;
 
 // Links
